# fleetglueTakeHome

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
src/fleetglue_cpp/: CMakeLists.txt  package.xml
src/fleetglue_cpp/action/: Message.action
src/fleetglue_cpp/launch/: nextjs_with_ros.launch.py
src/fleetglue_cpp/nextjs_api/: package-lock.json  package.json
src/fleetglue_cpp/nextjs_api/pages/api/: mission.js
src/fleetglue_cpp/src/: RN1.cpp  RN2.cpp  node1.cpp  node2.cpp
